# ppc2cpp

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: build.yml  linux.yml  windows.yml
include/ppc2cpp/analysis/: PpcdisAnalysis.hpp  ProgramComparator.hpp
include/ppc2cpp/common/: FileTypeException.hpp  ProjectPersistenceException.hpp  common.h  endian.h  insn_properties.h
include/ppc2cpp/control_flow/: ControlFlowAnalysis.hpp  ControlFlowGraph.hpp
include/ppc2cpp/data_flow/: DataFlowAnalysis.hpp  DataFlowGraph.hpp  DataFlowNode.hpp  DfgVisualizer.hpp  FlowContext.hpp  PpcCallingConvention.hpp  PpcInstructionUD.hpp  PpcOperandCats.h
include/ppc2cpp/model/: BinaryLocation.hpp  CpuMemory.hpp  Function.hpp  ProgramLocation.hpp  Project.hpp  Relocation.hpp  RelocationTable.hpp  Symbol.hpp  SymbolTable.hpp
include/ppc2cpp/program_loader/: Binary.hpp  BinarySection.hpp  Dol.hpp  DolSection.hpp  ElfBinary.hpp  ElfProgramLoader.hpp  ElfSection.hpp  NinProgramLoader.hpp  ProgramLoader.hpp  Rel.hpp  RelSection.hpp
proto/: program_loader.proto  program_location.proto  project.proto  relocs.proto  symbols.proto
src/analysis/: PpcdisAnalysis.cpp  ProgramComparator.cpp
src/cli/: ppc2cpp.cpp
src/control_flow/: ControlFlowAnalysis.cpp
src/data_flow/: DataFlowAnalysis.cpp  DfgVisualizer.cpp  PpcCallingConvention.cpp  PpcInstructionUD.cpp  PpcOperandCats.cpp
src/demo/: program_loader_demo.cpp
src/model/: Project.cpp  RelocationTable.cpp  SymbolTable.cpp
src/program_loader/: Binary.cpp  Dol.cpp  DolSection.cpp  ElfBinary.cpp  ElfProgramLoader.cpp  ElfSection.cpp  NinProgramLoader.cpp  ProgramLoader.cpp  Rel.cpp  RelSection.cpp
test/: analysis_test.cpp  program_loader_demo.cpp  test_helper.h
